fix login format and spacing

--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ form div {
 }
 
 .login {
-    font-size: 20px;
+    font-size: 1em;
 }
 
 &:valid {
